# multialign

./: Cargo.toml  README.md
metrics/: famsa.csv
src/: main.rs  multialign.rs
src/multialign/: display.rs  metric.rs
src/multialign/metric/: pairwise_cost_metric.rs  pairwise_match_metric.rs
test_files/: decuple-diff-1.fa  decuple-diff-2.fa  decuple-diff-3.fa  decuple-diff-4.fa  decuple-diff-5.fa  decuple-same.fa  quintuple-long-diff-1.fa  quintuple-long-diff-2.fa  quintuple-long-diff-3.fa  quintuple-long-same.fa  triple-long-diff-1.fa  triple-long-diff-2.fa  triple-long-diff-3.fa  triple-long-diff-4.fa  triple-long-diff-5.fa  triple-long-same.fa  triple-one-diff.fa  triple-same.fa  triple-two-diff.fa
